Modification de l'historique des mises à jour
Remplissage jusqu'à la 2.1.2

--- a/historique_maj.html
+++ b/historique_maj.html
@@ -15,31 +15,68 @@
 			<br>
 		  <center>
 			<p>
-			  <a href="historique_maj.html">historique des mises à jour</a> |
-			  <a href="app/index.html">application en ligne</a> |
-			  <a href="https://build.phonegap.com/apps/581887/share">telecharger l'application pour tablette</a>
+			  <a href="historique_maj.html">Historique des mises à jour</a> |
+			  <a href="app/index.html">Application en ligne</a> |
+			  <a href="https://build.phonegap.com/apps/581887/share">Application pour tablette</a>
 			</p>
 			</center>
 		</header>
 		<br><br>
-
-
-<ul>
-	<li><strong>2.0.2</strong> - Ajout de la version PC</li>
-	<ul>
-		<li></li>
-	</ul>
-	<li><strong>2.0.1</strong> - Gestion du multi-plateforme mobile</li>
-	<ul>
-		<li>Passage de Cordova à Phonegap.</li>
-		<li>On peut désormais compiler l'application dans le cloud (sur des serveurs d'Adobe), pour toutes les plateformes d'un coup.</li>
-		<li>On obtient un "lien de partage" permettant de télécharger l'application depuis n'importe quel tablette (en allant sur le lien avec une tablette ou en scannant le QRcode).</li>
-	</ul>
-	<li><strong>2.0.0</strong> - Code source initial</li>
-	<ul>
-		<li></li>
-	</ul>
-</ul>
+		
+		<ul>
+			<li><strong>2.1.x</strong>
+				<ul>
+					<li><strong>2.1.2</strong> - Passage des fichiers audio au format .ogg</li>
+					<ul>
+						<li>Passage du format .wav en .ogg : Gain sur la taille de l'application (14Mo -> 3Mo).</li>
+					</ul>
+					<li><strong>2.1.1</strong> - Animations dynamiques pour les mots</li>
+					<ul>
+						<li>Animation simple "couper" dynamique.</li>
+						<li>Disponible vers la gauche ou vers la droite.</li>
+						<li>Pas de gestion des évènements.</li>
+					</ul>
+					<li><strong>2.1.0</strong> - Commencement du récit</li>
+					<ul>
+						<li>Affichage dynamique des mots.</li>
+						<li>Séparation de l'écran en lignes pour l'affichage.</li>
+						<li>Uniquement pour la police coupable_haut.</li>
+					</ul>
+				</ul>
+			</li>
+			<li><strong>2.0.x</strong>
+				<ul>
+					<li><strong>2.0.5</strong> - Résolution du bug audio sur tablette</li>
+					<ul>
+						<li>Le son fonctionne pour toutes les plate-formes (PC, tablette).</li>
+					</ul>
+					<li><strong>2.0.4</strong> - Restructuration du code</li>
+					<ul>
+						<li>Division des scripts JS en plusieurs petits scripts pour faciliter grandement le développement.</li>
+					</ul>
+					<li><strong>2.0.3</strong> - Modification du logo de l'introduction</li>
+					<ul>
+						<li>Amélioration graphique du logo, plus circulaire et plus symétrique.</li>
+					</ul>
+					<li><strong>2.0.2</strong> - Ajout de la version PC</li>
+					<ul>
+						<li>Gestion centralisée des evènements peu importe le support.</li>
+						<li>Bug audio : le son n'est disponible que sur PC.</li>
+						<li>Détection manuelle pour savoir si on est sur tablette ou sur PC.</li>
+					</ul>
+					<li><strong>2.0.1</strong> - Gestion du multi-plateforme mobile</li>
+					<ul>
+						<li>Passage de Cordova à Phonegap.</li>
+						<li>On peut désormais compiler l'application dans le cloud (sur des serveurs d'Adobe), pour toutes les plateformes d'un coup.</li>
+						<li>On obtient un "lien de partage" permettant de télécharger l'application depuis n'importe quel tablette (en allant sur le lien avec une tablette ou en scannant le QRcode).</li>
+					</ul>
+					<li><strong>2.0.0</strong> - Code source initial</li>
+					<ul>
+					</ul>
+				</ul>
+			</li>
+		</ul>
+		
 	</body>
 </html>
 
