--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 			<br>
 		  <center>
 			<p>
-			  <a href="historique_maj.html">historique des mises à jour</a> |
-			  <a href="app/index.html">application en ligne</a> |
-			  <a href="https://build.phonegap.com/apps/581887/share">application tablette</a>
+			  <a href="historique_maj.html">Historique des mises à jour</a> |
+			  <a href="app/index.html">Application en ligne</a> |
+			  <a href="https://build.phonegap.com/apps/581887/share">Application tablette</a>
 			</p>
 			</center>
 		</header>
