mise a jour du patch note pour la 2.1.3

--- a/historique_maj.html
+++ b/historique_maj.html
@@ -24,6 +24,10 @@
 		<ul>
 			<li><strong>2.1.x</strong>
 				<ul>
+					<li><strong>2.1.3</strong> - Debut du developpement du Labo</li>
+					<ul>
+						<li>Création d'une classe Cloud pour l'affichage des mots en nuage.</li>
+					</ul>
 					<li><strong>2.1.2</strong> - Passage des fichiers audio au format .ogg</li>
 					<ul>
 						<li>Passage du format .wav en .ogg : Gain sur la taille de l'application (14Mo -> 3Mo).</li>
@@ -74,7 +78,7 @@
 				</ul>
 			</li>
 		</ul>
-		
+
 	</body>
 </html>
 
