--- a/historique_maj.html
+++ b/historique_maj.html
@@ -22,11 +22,33 @@
 			</center>
 		</header>
 		<ul>
+			<li><strong>2.2.x</strong>
+				<ul>
+					<li><strong>2.2.3</strong> - Correction de bugs</li>
+					<ul>
+						<li>Correction d'un bug d'affichage sur Galaxy Tab 3.</li>
+						<li>Amélioration du lancement de l'application : les bugs graphiques sont résolus.</li>
+						<li>Attente du chargement des scripts et des polices avant le lancement de l'application.</li>
+					</ul>
+				
+					<li><strong>2.2.2</strong> - Chargement d'un récit depuis un fichier xml</li>
+					<ul>
+						<li>Chargement des mots simples et coupables depuis un fichier xml.</li>
+					</ul>
+
+					<li><strong>2.2.1</strong> - Amélioration du mode récit</li>
+					<ul>
+						<li>Zoom lors du clic sur un mot actif.</li>
+						<li>Coupure pour les polices coupables haut et bas.</li>
+						<li>Coupure des mots reversible.</li>
+					</ul>
+				</ul>
+			</li>
 			<li><strong>2.1.x</strong>
 				<ul>
 					<li><strong>2.1.3</strong> - Debut du developpement du Labo</li>
 					<ul>
-						<li>Création d'une classe Cloud pour l'affichage des mots en nuage.</li>
+						<li>Affichage des mots en nuage dans le labo.</li>
 					</ul>
 					<li><strong>2.1.2</strong> - Passage des fichiers audio au format .ogg</li>
 					<ul>
