--- a/historique_maj.html
+++ b/historique_maj.html
@@ -24,6 +24,13 @@
 		<ul>
 			<li><strong>2.2.x</strong>
 				<ul>
+					<li><strong>2.2.4</strong> - Ajout d'informations sur le chargement</li>
+					<ul>
+						<li>Amélioration du logo de chargement.</li>
+						<li>Affichage du pourcentage des fichiers chargés et du nom de chaque fichier chargé.</li>
+						<li>Correction du bug dans le récit : activation de deux mots en même temps.</li>
+					</ul>
+				
 					<li><strong>2.2.3</strong> - Correction de bugs</li>
 					<ul>
 						<li>Correction d'un bug d'affichage sur Galaxy Tab 3.</li>
