--- a/historique_maj.html
+++ b/historique_maj.html
@@ -24,6 +24,13 @@
 		<ul>
 			<li><strong>2.2.x</strong>
 				<ul>
+					<li><strong>2.2.5</strong> - Avancement du Labo</li>
+					<ul>
+						<li>Chargement d'un fichier XML préalablement téléchargé.</li>
+						<li>Mot central unique pour l'instant.</li>
+						<li>Fonctionnalités basiques pour le moment : un clic sur un mot dans le nuage active le mot central qui devient animable.</li>
+					</ul>
+				
 					<li><strong>2.2.4</strong> - Ajout d'informations sur le chargement</li>
 					<ul>
 						<li>Amélioration du logo de chargement.</li>
