--- a/historique_maj.html
+++ b/historique_maj.html
@@ -28,7 +28,7 @@
 					<ul>
 						<li>Chargement d'un fichier XML préalablement téléchargé.</li>
 						<li>Mot central unique pour l'instant.</li>
-						<li>Fonctionnalités basiques pour le moment : un clic sur un mot dans le nuage active le mot central qui devient animable.</li>
+						<li>Fonctionnalités basiques pour le moment : un clic sur un mot dans le nuage active le mot central qui devient coupable.</li>
 					</ul>
 				
 					<li><strong>2.2.4</strong> - Ajout d'informations sur le chargement</li>
