Correction d'une faute mineure

--- a/historique_maj.html
+++ b/historique_maj.html
@@ -30,7 +30,7 @@
 						<li>"La séparation" devient "Séparation".</li>
 						<li>"ENGLISH / FRENCH" devient "Fr | En" (mais n'est toujours pas fonctionnelle).</li>
 						<li>Ajout d'un son provisoire associé au 'tap'.</li>
-						<li>Suppresion du son de respiration.</li>
+						<li>Suppression du son de respiration.</li>
 					</ul>
 				
 					<li><strong>2.4.1</strong> - Refonte de l'introduction et du menu</li>
