mise a jour de l'historique des mise a jour

--- a/historique_maj.html
+++ b/historique_maj.html
@@ -24,9 +24,13 @@
 		<ul>
 			<li><strong>2.4.x</strong>
 				<ul>
-					<li><strong>2.4.2</strong> - Modifications mineures & live</li>
+					<li><strong>2.4.2</strong> - Modifications mineures et refonte des gestes</li>
 					<ul>
-						<li>"Recit" devient "Poèmes".</li>
+						<li>Ajout des sons associés aux différents gestes.</li>
+						<li>Melange aléatoire des possibilités dans le labo apres recherche des correspondances.</li>
+						<li>Nouvelle animation et nouveau geste pour la police centrale.</li>
+						<li>Refonte de la detection des gestes pour toutes les polices.</li>
+						<li>"Recit" devient "Salon".</li>
 						<li>"La séparation" devient "Séparation".</li>
 						<li>"ENGLISH / FRENCH" devient "Fr | En" (mais n'est toujours pas fonctionnelle).</li>
 						<li>Ajout d'un son provisoire associé au 'tap'.</li>
