--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 		  <center>
 			<p>
 			  <a href="historique_maj.html">Historique des mises à jour</a> |
-			  <a href="app/index.html">Application en ligne</a> |
-			  <a href="https://build.phonegap.com/apps/581887/share">Application tablette</a>
+			  <a href="telechargement.html">Application</a>
 			</p>
 			</center>
 		</header>
